Fix overflow on tracks components

--- a/src/styles/components/TrackCard.scss
+++ b/src/styles/components/TrackCard.scss
@@ -5,6 +5,7 @@
   width: 50%;
   margin: 0.2rem auto;
   border: 2px solid var(--primary-color);
+  background-color: azure;
 
   .sport-icon-card {
     font-size: 3rem;
